logs/processes/ICAN_QA_Service_localhost_191007_055407.log
id:119
user_name:localhost
user_id:127.0.0.1
script:ICAN QA Service
start_time:1570427647714
command:/home/cppxaxa/Downloads/ICAN/ScriptServer/ImageDescriptors/QAService.py
exit_code:1
>>>>>  OUTPUT STARTED <<<<<
Traceback (most recent call last):
  File "/home/cppxaxa/Downloads/ICAN/ScriptServer/ImageDescriptors/QAService.py", line 6, in <module>
    from QuestionParser import QuestionParserFactory
  File "/home/cppxaxa/Downloads/ICAN/ScriptServer/ImageDescriptors/QuestionParser.py", line 60
    else if len(outputList) > 1:
          ^
SyntaxError: invalid syntax
